--- a/NormApp3/DESCRIPTION
+++ b/NormApp3/DESCRIPTION
@@ -1,6 +1,6 @@
 Title: Normal Calculator
 Author: Alan T. Arnholt
-AuthorUrl: https://alanarnholt.github.io/web
+AuthorUrl: https://alanarnholt.github.io
 License: MIT
 DisplayMode: Showcase
 Tags: getting-started
